<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_2"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_marginTop="110dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_2_1"
        android:textColor="#000000"
        android:textSize="20sp"
        android:background="@drawable/btn_unclicked"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_2"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_2_2"
        android:textColor="#000000"
        android:textSize="20sp"
        android:background="@drawable/btn_unclicked"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="@id/btn_1"
        app:layout_constraintBottom_toTopOf="@id/btn_3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_2_3"
        android:textColor="#000000"
        android:textSize="20sp"
        android:background="@drawable/btn_unclicked"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="@id/btn_1"
        app:layout_constraintBottom_toTopOf="@id/btn_4"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_2_4"
        android:textColor="#000000"
        android:textSize="20sp"
        android:background="@drawable/btn_unclicked"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toStartOf="@id/btn_1"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>